feat: add graphql history control.
